# sample-moderator

./: .gitignore  Dockerfile  README.md  post.py  pyproject.toml  sample-claude.py  sample-llama2-local.py  sample-openai.py  sample.ipynb
docs/: setup.md
input/: prompt-fact.txt  prompt-sentiment.txt  sample-post.txt  test-prompt1.txt  test-prompt2.txt  test-prompt3.txt
output/: sample-output.txt
prompt/: test_prompt2.txt  test_prompt3.txt
